--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_bloc: ^8.1.3 # Vagy a legújabb verzió
+  equatable: ^2.0.5
 
 flutter:
   uses-material-design: true
